<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIncomeActivity">

    <TextView
        android:id="@+id/txtIncomeTitle"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="@string/add_income_title"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblIncomeSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_source"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtIncomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp" />

    <EditText
        android:id="@+id/edtIncomeSource"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:hint="@string/hint_income_source"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lblIncomeSource"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/lblIncomeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edtIncomeSource"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/edtIncomeAmount"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:hint="@string/hint_dollar_amount"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lblIncomeAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnAddIncomeSubmit"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/edtIncomeAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp" />

    <Button
        android:id="@+id/btnIncomeHome"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/btnAddIncomeSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="14dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="71dp"
        android:layout_height="100dp"
        android:layout_marginTop="-100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIncomeTitle"
        app:srcCompat="@drawable/img_buget_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>